--- a/photomats.html
+++ b/photomats.html
@@ -162,8 +162,8 @@
           </div>
           <div class="col-xs-2">
             <div class="thumbnail">
-              <a href="images/photomatimages/Pete.jpg" target="_blank">
-                  <img src="images/photomatimages/Pete.jpg" alt="Red and white wedding">
+              <a href="images/photomatimages/daisypete.jpg" target="_blank">
+                  <img src="images/photomatimages/daisypete.jpg" alt="daisy flowers">
               </a>
               <div class="caption">
                   <h4>Daisy Wedding</h4>
@@ -174,8 +174,8 @@
     <div class="row">
           <div class="col-xs-offset-2 col-xs-2">
             <div class="thumbnail">
-              <a href="images/photomatimages/mother.jpg" target="_blank">
-                  <img src="images/photomatimages/mother.jpg" alt="wedding picture">
+              <a href="images/photomatimages/mothermat.jpg" target="_blank">
+                  <img src="images/photomatimages/mothermat.jpg" alt="wedding picture">
               </a>
               <div class="caption">
                   <h4>Mother Frame</h4>
