--- a/photomats.html
+++ b/photomats.html
@@ -45,7 +45,7 @@
       <h1>Quilled Photo Mats</h1>
       <div class="row">
         <div class="col-md-8">
-          <a href="images/photomatimages/columbinemeadows.jpg" target="_blank"><img class="subject-pic" src="images/colWedding.jpg" class="img-rounded" alt="columbine wedding"></a>
+          <a href="images/photomatimages/columbinemeadows.jpg" target="_blank"><img class="subject-pic" src="images/columbine1wedding.jpg" class="img-rounded" alt="columbine wedding"></a>
           <p>
               Your precious memories should be displayed for your daily enjoyment. Many families spend hundreds or thousands of dollars on professional photos. Don't hide them in a shoe box!
           </p>
