--- a/ornaments.html
+++ b/ornaments.html
@@ -53,27 +53,34 @@
             Click on the images to see a larger view.
           </p><br />
           <div class="row">
-          <div class="col-xs-3">
-              <a href="images/ornaments/largeangels.jpg" target="_blank" class="thumbnail">
-                  <img class="img-responsive" src="images/ornaments/largeangels.jpg" alt="angel">
-              </a>
+            <div class="col-xs-3">
+                <a href="images/ornaments/angels640_480.jpg" target="_blank" class="thumbnail">
+                    <img class="img-responsive" src="images/ornaments/angels640_480.jpg" alt="angel">
+                </a>
+            </div>
+            <div class="col-xs-3">
+                <a href="images/ornaments/angelsback640_480.jpg" target="_blank" class="thumbnail">
+                    <img class="img-responsive" src="images/ornaments/angelsback640_480.jpg" alt="angel">
+                </a>
+            </div>
+            <div class="col-xs-3">
+                <a href="images/ornaments/poinsettawreath.jpg" target="_blank" class="thumbnail">
+                    <img class="img-responsive" src="images/ornaments/poinsettawreath.jpg" alt="poinsettawreath">
+                </a>
+            </div>
+            <div class="col-xs-3">
+                <a href="images/ornaments/redrosemum640_480.jpg" target="_blank" class="thumbnail">
+                    <img class="img-responsive" src="images/ornaments/redrosemum640_480.jpg" alt="redroseandmumornament">
+                </a>
+            </div>
           </div>
-          <div class="col-xs-3">
-              <a href="images/ornaments/poinsettawreath.jpg" target="_blank" class="thumbnail">
-                  <img class="img-responsive" src="images/ornaments/poinsettawreath.jpg" alt="poinsettawreath">
-              </a>
+          <div class="row">
+            <div class="col-xs-3">
+                <a href="images/ornaments/wreath640_480.jpg" target="_blank" class="thumbnail">
+                    <img class="img-responsive" src="images/ornaments/wreath640_480.jpg" alt="wreathphotoframeornament">
+                </a>
+            </div>
           </div>
-          <div class="col-xs-3">
-              <a href="images/ornaments/redroseandmumornament.jpg" target="_blank" class="thumbnail">
-                  <img class="img-responsive" src="images/ornaments/redroseandmumornament.jpg" alt="redroseandmumornament">
-              </a>
-          </div>
-          <div class="col-xs-3">
-              <a href="images/ornaments/wreathphotoframeornament.jpg" target="_blank" class="thumbnail">
-                  <img class="img-responsive" src="images/ornaments/wreathphotoframeornament.jpg" alt="wreathphotoframeornament">
-              </a>
-          </div>
-      </div>
         </div> 
         <div class="col-md-4">
             <div class="panel panel-default">
