--- a/scrapbook.html
+++ b/scrapbook.html
@@ -61,8 +61,8 @@
                   </a>
               </div>
               <div class="col-xs-3">
-                  <a href="images/scrapbook/butterflypavilion.jpg" target="_blank" class="thumbnail">
-                      <img class="img-responsive" src="images/scrapbook/butterflypavilion.jpg" alt="butterfly">
+                  <a href="images/scrapbook/butterfly.jpg" target="_blank" class="thumbnail">
+                      <img class="img-responsive" src="images/scrapbook/butterfly.jpg" alt="butterfly">
                   </a>
               </div>   
         </div>
@@ -78,8 +78,8 @@
                   </a>
               </div>
               <div class="col-xs-3">
-                  <a href="images/scrapbook/ringbearer.jpg" target="_blank" class="thumbnail">
-                      <img src="images/scrapbook/ringbearer.jpg" alt="ringbearer">
+                  <a href="images/scrapbook/ring.jpg" target="_blank" class="thumbnail">
+                      <img src="images/scrapbook/ring.jpg" alt="ringbearer">
                   </a>
               </div> 
         </div>
