--- a/scrapbook.html
+++ b/scrapbook.html
@@ -51,8 +51,8 @@
 
           <div class="row">
               <div class="col-xs-offset-1 col-xs-3">
-                  <a href="images/scrapbook/baseballgame.jpg" target="_blank" class="thumbnail">
-                      <img class="img-responsive" src="images/scrapbook/baseballgame.jpg" alt="baseball">
+                  <a href="images/scrapbook/rockies.jpg" target="_blank" class="thumbnail">
+                      <img class="img-responsive" src="images/scrapbook/rockies.jpg" alt="baseball">
                   </a>
               </div>
               <div class="col-xs-3">
@@ -68,8 +68,8 @@
         </div>
         <div class="row">
               <div class="col-xs-offset-1 col-xs-3">
-                  <a href="images/scrapbook/denverzoo.jpg" target="_blank" class="thumbnail">
-                      <img src="images/scrapbook/denverzoo.jpg" alt="zoo">
+                  <a href="images/scrapbook/denverzoo2.jpg" target="_blank" class="thumbnail">
+                      <img src="images/scrapbook/denverzoo2.jpg" alt="zoo">
                   </a>
               </div>
               <div class="col-xs-3">
@@ -107,8 +107,8 @@
                   </a>
               </div>
               <div class="col-xs-3">
-                  <a href="images/scrapbook/zoo.jpg" target="_blank" class="thumbnail">
-                      <img src="images/scrapbook/zoo.jpg" alt="zoo">
+                  <a href="images/scrapbook/cozoo.jpg" target="_blank" class="thumbnail">
+                      <img src="images/scrapbook/cozoo.jpg" alt="zoo">
                   </a>
               </div>
               <div class="col-xs-3">
