--- a/index.html
+++ b/index.html
@@ -43,6 +43,44 @@
           <li><a href="links.html">Links</a></li>
       </ul>
       <h1>Welcome</h1>
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="images/slider/angel.jpg" alt="quilled angels">
+      <div class="carousel-caption">
+        Quilled Angels
+      </div>
+    </div>
+    <div class="item">
+      <img src="images/slider/horse.jpg" alt="horse">
+      <div class="carousel-caption">
+        Scrapbook Page
+      </div>
+    </div>
+    <div class="item">
+      <img src="images/slider/heart.jpg" alt="heart">
+      <div class="carousel-caption">
+        Quilled Heart Ornament
+      </div>
+    </div>
+  </div>
+<br/>
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
       <div class="row">
         <div class="col-md-8">
           <img class="subject-pic" src="images/columbine2.jpg" class="img-rounded" alt="columbine picture">
