fixed path for picture in about page

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
       <h1>About the Owner</h1>
       <div class="row">
         <div class="col-md-8">
-          <img class="subject-pic" src="images/about/columbine.jpg" class="img-rounded" alt="columbine picture">
+          <img class="subject-pic" src="images/About/columbine.jpg" class="img-rounded" alt="columbine picture">
           <p>
               My name is Janet and I am the owner of The Paper Petal. Throughout my life, I have enjoyed participating in artistic hobbies. When I was young, I would spend much time drawing and painting with different mediums. As an adult, I found painting ceramics to be very fun. I have been creating greeting cards for ten years, scrapbooking for eight years, and quilling for six years.
           </p>
