--- a/photomats.html
+++ b/photomats.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>The Paper Petal, LLC</title>
 
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="fancybox/source/jquery.fancybox.css" type="text/css" media="screen" />
+    <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js"></script>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/thepaperpetalstyles.css" rel="stylesheet">
@@ -45,7 +52,7 @@
       <h1>Quilled Photo Mats</h1>
       <div class="row">
         <div class="col-md-8">
-          <a href="images/photomatimages/columbinemeadows.jpg" target="_blank"><img class="subject-pic" src="images/columbine1wedding.jpg" class="img-rounded" alt="columbine wedding"></a>
+          <a class="fancybox" href="images/photomatimages/columbinemeadows.jpg" target="_blank"><img class="subject-pic" src="images/columbine1wedding.jpg" class="img-rounded" alt="columbine wedding"></a>
           <p>
               Your precious memories should be displayed for your daily enjoyment. Many families spend hundreds or thousands of dollars on professional photos. Don't hide them in a shoe box!
           </p>
@@ -90,7 +97,7 @@
       <div class="row">
           <div class="col-xs-offset-2 col-xs-2">
               <div class="thumbnail">
-                <a href="images/photomatimages/camden3small.jpg" target="_blank">
+                <a class="fancybox" href="images/photomatimages/camden3small.jpg" target="_blank">
                     <img class="img-responsive" src="images/photomatimages/camden3small.jpg" alt="wedding picture">   
                 </a>
                 <div class="caption">
@@ -100,7 +107,7 @@
             </div>
           <div class="col-xs-2">
             <div class="thumbnail">
-              <a href="images/photomatimages/camdenmike.jpg" target="_blank">
+              <a class="fancybox" href="images/photomatimages/camdenmike.jpg" target="_blank">
                   <img class="img-responsive" src="images/photomatimages/camdenmike.jpg" alt="Cowboy wedding">
               </a>
               <div class="caption">
@@ -110,7 +117,7 @@
           </div>
           <div class="col-xs-2">
             <div class="thumbnail">
-              <a href="images/photomatimages/Emi.jpg" target="_blank">
+              <a class="fancybox" href="images/photomatimages/Emi.jpg" target="_blank">
                   <img class="img-responsive" src="images/photomatimages/Emi.jpg" alt="Pink wedding">
               </a>
               <div class="caption">
@@ -120,7 +127,7 @@
           </div>
           <div class="col-xs-2">
             <div class="thumbnail">
-              <a href="images/photomatimages/hannah.jpg" target="_blank">
+              <a class="fancybox" href="images/photomatimages/hannah.jpg" target="_blank">
                   <img class="img-responsive" src="images/photomatimages/hannah.jpg" alt="Red and white wedding">
               </a>
               <div class="caption">
@@ -132,7 +139,7 @@
     <div class="row">
           <div class="col-xs-offset-2 col-xs-2">
             <div class="thumbnail">
-              <a href="images/photomatimages/cowboywedding.jpg" target="_blank">
+              <a class="fancybox" href="images/photomatimages/cowboywedding.jpg" target="_blank">
                   <img src="images/photomatimages/cowboywedding.jpg" alt="wedding picture">
               </a>
               <div class="caption">
@@ -142,7 +149,7 @@
           </div>
           <div class="col-xs-2">
               <div class="thumbnail">
-              <a href="images/photomatimages/columbinewedding.jpg" target="_blank">
+              <a class="fancybox" href="images/photomatimages/columbinewedding.jpg" target="_blank">
                   <img src="images/photomatimages/columbinewedding.jpg" alt="Columbine wedding">
               </a>
               <div class="caption">
@@ -152,7 +159,7 @@
           </div>
           <div class="col-xs-2">
             <div class="thumbnail">
-              <a href="images/photomatimages/mountainwedding.jpg" target="_blank">
+              <a class="fancybox" href="images/photomatimages/mountainwedding.jpg" target="_blank">
                   <img src="images/photomatimages/mountainwedding.jpg" alt="Mountain wedding">
               </a>
               <div class="caption">
@@ -162,7 +169,7 @@
           </div>
           <div class="col-xs-2">
             <div class="thumbnail">
-              <a href="images/photomatimages/daisypete.jpg" target="_blank">
+              <a class="fancybox" href="images/photomatimages/daisypete.jpg" target="_blank">
                   <img src="images/photomatimages/daisypete.jpg" alt="daisy flowers">
               </a>
               <div class="caption">
@@ -174,7 +181,7 @@
     <div class="row">
           <div class="col-xs-offset-2 col-xs-2">
             <div class="thumbnail">
-              <a href="images/photomatimages/mothermat.jpg" target="_blank">
+              <a class="fancybox" href="images/photomatimages/mothermat.jpg" target="_blank">
                   <img src="images/photomatimages/mothermat.jpg" alt="wedding picture">
               </a>
               <div class="caption">
@@ -184,7 +191,7 @@
           </div>
           <div class="col-xs-2">
             <div class="thumbnail">
-              <a href="images/photomatimages/shannon.jpg" target="_blank">
+              <a class="fancybox" href="images/photomatimages/shannon.jpg" target="_blank">
                   <img src="images/photomatimages/shannon.jpg" alt="Columbine wedding">
               </a>
               <div class="caption">
@@ -194,7 +201,7 @@
           </div>
           <div class="col-xs-2">
             <div class="thumbnail">
-              <a href="images/photomatimages/ovalbluepink.jpg" target="_blank">
+              <a class="fancybox" href="images/photomatimages/ovalbluepink.jpg" target="_blank">
                   <img src="images/photomatimages/ovalbluepink.jpg" alt="Mountain wedding">
               </a>
               <div class="caption">
@@ -204,7 +211,7 @@
           </div>
           <div class="col-xs-2">
             <div class="thumbnail">
-              <a href="images/photomatimages/creed2.jpg" target="_blank">
+              <a class="fancybox" href="images/photomatimages/creed2.jpg" target="_blank">
                   <img src="images/photomatimages/creed2.jpg" alt="Red and white wedding">
               </a>
               <div class="caption">
@@ -217,9 +224,10 @@
         &copy; The PaperPetal, LLC 2014 All Rights Reserved.
       </footer>
     </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $('.fancybox').fancybox();
+      });
+    </script>
   </body>
 </html>
