--- a/about.html
+++ b/about.html
@@ -5,7 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>The Paper Petal, LLC</title>
+<!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>  -->
+    
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
 
+    <link rel="stylesheet" href="fancybox/source/jquery.fancybox.css" type="text/css" media="screen" />
+    <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js"></script>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/thepaperpetalstyles.css" rel="stylesheet">
@@ -45,7 +53,7 @@
       <h1>About the Owner</h1>
       <div class="row">
         <div class="col-md-8">
-          <img class="subject-pic" src="images/About/columbine.jpg" class="img-rounded" alt="columbine picture">
+          <a class="fancybox" href="images/About/columbine.jpg"><img class="subject-pic" src="images/About/columbine.jpg" class="img-rounded" alt="columbine picture"></a>
           <p>
               My name is Janet and I am the owner of The Paper Petal. Throughout my life, I have enjoyed participating in artistic hobbies. When I was young, I would spend much time drawing and painting with different mediums. As an adult, I found painting ceramics to be very fun. I have been creating greeting cards for ten years, scrapbooking for eight years, and quilling for six years.
           </p>
@@ -84,9 +92,10 @@
         &copy; The PaperPetal, LLC 2014 All Rights Reserved.
       </footer>
     </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+          $('.fancybox').fancybox();
+        });
+    </script>
   </body>
 </html>
